tests/snapshots/integration__integration_tests__help__help_config_state.snap
---
source: tests/integration_tests/help.rs
assertion_line: 40
info:
  program: wt
  args:
    - config
    - state
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/test/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state - Manage internal data and cache

Usage: [1m[36mwt config state[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mdefault-branch[0m   Default branch detection and override
  [1m[36mprevious-branch[0m  Previous branch (for [1mwt switch -[0m)
  [1m[36mci-status[0m        CI status cache
  [1m[36mmarker[0m           Branch markers
  [1m[36mparent[0m           Parent branch (stacked branches)
  [1m[36mlogs[0m             Background operation logs
  [1m[36mhints[0m            One-time hints shown in this repo
  [1m[36mget[0m              Get all stored state
  [1m[36mclear[0m            Clear all stored state

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: hooks, templates; -vv: debug report)

State is stored in [2m.git/[0m (config entries and log files), separate from configuration files.
Use [2mwt config show[0m to view file-based configuration.

[1m[32mKeys[0m

- [1mdefault-branch[0m: The repository's default branch ([2mmain[0m, [2mmaster[0m, etc.)
- [1mprevious-branch[0m: Previous branch for [2mwt switch -[0m
- [1mci-status[0m: CI/PR status for a branch (passed, running, failed, conflicts, no-ci, error)
- [1mmarker[0m: Custom status marker for a branch (shown in [2mwt list[0m)
- [1mlogs[0m: Background operation logs

[1m[32mExamples[0m

Get the default branch:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state default-branch[0m

Set the default branch manually:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state default-branch set main[0m

Set a marker for current branch:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state marker set [0m[2m[32m"🚧 WIP"[0m[2m[0m

Clear all CI status cache:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state ci-status clear [0m[2m[36m--all[0m[2m[0m

Show all stored state:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state get[0m

Clear all stored state:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state clear[0m
