tests/snapshots/integration__integration_tests__help__help_root_short.snap
---
source: tests/integration_tests/help.rs
assertion_line: 40
info:
  program: wt
  args:
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/test/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt - Git worktree management for parallel AI agent workflows

Usage: [1m[36mwt[0m [36m[OPTIONS][0m [36m[COMMAND][0m

[1m[32mCommands:[0m
  [1m[36mswitch[0m  Switch to a worktree; create if needed
  [1m[36mlist[0m    List worktrees and their status
  [1m[36mremove[0m  Remove worktree; delete branch if merged
  [1m[36mmerge[0m   Merge current branch into target
  [1m[36mstep[0m    Run individual operations
  [1m[36mstack[0m   Manage stacked branches
  [1m[36mhook[0m    Run configured hooks
  [1m[36mconfig[0m  Manage user & project configs

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m     Print help (see more with '--help')
  [1m[36m-V[0m, [1m[36m--version[0m  Print version

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m     Verbose output (-v: hooks, templates; -vv: debug report)
